[FLINK-18045] Fix Kerberos credentials checking
This closes #12462.